# sdrac_controler

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  build.sh  compile.sh  init-build.sh  moveit.sh  requirements.txt  run.sh  start_can.sh  start_dumy_rc.sh  start_nomad.sh  test_can.py
launch/: launch_develop_rc.yaml
launch_files/: controler_xyz.py  develop_inverse.py  develop_rc.launch.py  launch_can.py  launch_develop_rc.yaml  nomad_rc.launch.py
scripts/: make_service.sh
services/: can_init.service  sdrac.service  start_can.sh  start_dumy_rc.sh  start_nomad.sh
simulations/: nice_eq copy.ipynb  nice_eq.ipynb  sim.py  solutions.py  visualizer.py
src/controler/: package.xml  setup.cfg  setup.py
src/controler/controler/: controler_dumy_rc.py  controler_simulation.py  controler_translator.py  controler_xyz.py  forward_kinematics.py  sim.py
src/konarm_bringup/: package.xml  setup.cfg  setup.py
src/konarm_bringup/config/: konarm_driver_parameters.yaml
src/konarm_bringup/launch/: develop_rc.launch.py  develop_rc.py
src/konarm_bringup/urdf/: sdrac.urdf.xacro
src/konarm_driver/: CMakeLists.txt  README.md  package.xml
src/konarm_driver/include/konarm_driver/: konarm_driver.hpp  konarm_joint_driver.hpp  konarm_joint_driver_sim.hpp
src/konarm_driver/src/: konarm_basic_joystick_driver.cpp  konarm_driver.cpp  konarm_driver_parameters.yaml  konarm_joint_driver.cpp
src/konarm_driver_msg/: CMakeLists.txt  README.md  package.xml
src/konarm_driver_msg/msg/: KonArmControlMode.msg
src/konarm_driver_msg/srv/: KonarmGetConfig.srv  KonarmSetConfig.srv
src/rc_six_axis/: package.xml  params.yaml  setup.cfg  setup.py
src/rc_six_axis/launch/: rc_six_axis_launch.py
src/rc_six_axis/rc_six_axis/: rc_six_axis.py
src/sdrac_can_stranslator/: package.xml  setup.cfg  setup.py
src/sdrac_can_stranslator/sdrac_can_stranslator/: can_device.py  can_node.py
